Name:		fficxx-runtime
Version:	0.1
Synopsis:	Runtime for fficxx-generated library
Description: 	Runtime for fficxx-generated library
License:        BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Data-files: 

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4

  Exposed-Modules: 
                   FFICXX.Runtime.Cast

  Include-dirs:    csrc
  Install-includes: MacroPatternMatch.h
